--- a/Portfolio/src/styles.less
+++ b/Portfolio/src/styles.less
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@primary-color: #ff0000;
+
+body {
+  background-color: @primary-color;
+}
+
+h1 {
+  color: darken(@primary-color, 20%);
+}
