added line and changed background color

--- a/Portfolio/src/app/app.component.html
+++ b/Portfolio/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Portfolio</h1>
+<app-project-register></app-project-register>
 <ng-container *ngIf="_shapeSelector">
     <div><app-projects-list></app-projects-list></div>
 </ng-container>
