--- a/Portfolio/src/styles.less
+++ b/Portfolio/src/styles.less
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-@primary-color: #ff0000;
+@import '~bootstrap/dist/css/bootstrap.css';
+
+@primary-color: #1e022eec;
 
 body {
   background-color: @primary-color;
 }
 
+
 h1 {
-  color: darken(@primary-color, 20%);
+  color: #f9fc4d;
 }
